--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "html-entities": "^2.3.2",
     "markdown-to-jsx": "^7.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "5",
     "react-scripts": "4.0.3",
